--- a/README.Rmd
+++ b/README.Rmd
@@ -33,12 +33,12 @@ See the vignette for more extensive use, but here's an example:
 
 ```{r example}
 powers::square(-3)
-powers::reciprocal(2)
-powers::areacircle(4)
+powers::reciprocal("2")
+powers::areacircle(5)
 ```
 
 ## For Developers
 
-Use the internal `pow` function as the machinery for the front-end functions such as `square`, `cube`, `quartic`, `reciprocal`, `areacircle`, and `volcyl`.
+Use the internal `pow` function as the machinery for the front-end functions such as `square`, `cube`, `quartic`, `reciprocal`. `areacircle`, and `volcyl`.
 
-Cool package, eh? Nah, this silly pacakge was just made for class! Don't take it too seriously!
+Cool package, eh? Nah, this silly package was made for class! Don't take it too seriously!
